--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         height: 30px;
         cursor: pointer;
     }
+    .location {
+        background-image: url('location.png');
+        background-size: cover;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
 </style>
 <body>
 <div id="map"></div>
